--- a/index.xhtml
+++ b/index.xhtml
@@ -54,6 +54,9 @@
       <div class="right"/>
     </header>
     <div id="deck">
+      <section id="404" data-name="404" class="hidden">
+        <h1>404</h1>
+      </section>
       <section id="login" data-name="login" class="hidden">
         <form id="login-form">
           <div>
